Fix overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -89,6 +89,8 @@ nav h1 {
   padding: 1em;
   background: white;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  overflow: auto;
 }
 
 .results {
